# hprss-sim

./: .gitignore  borrow2  borrow3
.github/: copilot-instructions.md
.github/extensions/graphify-hook/: extension.mjs
.github/workflows/: hprss-sim-ci.yml
hprss-sim/: Cargo.toml  Makefile
hprss-sim/artifacts/evidence/latest/: manifest.json
hprss-sim/artifacts/evidence/latest/reproduction/: manifest.json  suite_records.jsonl  sweep.csv
hprss-sim/artifacts/reproduction/alg-paper-reproduction-suite/: suite_records.jsonl  sweep.csv
hprss-sim/configs/: platform_ft2000_full.toml
hprss-sim/configs/repro/: alg_paper_reproduction_suite.json
hprss-sim/crates/hprss-devices/: Cargo.toml
hprss-sim/crates/hprss-devices/src/: fully_preemptive.rs  interrupt_level.rs  lib.rs  limited_preemptive.rs  non_preemptive.rs
hprss-sim/crates/hprss-devices/tests/: virtual_models.rs
hprss-sim/crates/hprss-engine/: Cargo.toml
hprss-sim/crates/hprss-engine/benches/: engine_bench.rs
hprss-sim/crates/hprss-engine/src/: dag_tracker.rs  device_manager.rs  engine.rs  lib.rs  transfer_manager.rs
hprss-sim/crates/hprss-engine/tests/: closed_loop.rs  criticality_switch_dispatch.rs  dag_flow.rs  device_model_wiring.rs  reevaluation.rs  shape_style_curve_baseline.rs
hprss-sim/crates/hprss-metrics/: Cargo.toml
hprss-sim/crates/hprss-metrics/src/: lib.rs
hprss-sim/crates/hprss-platform/: Cargo.toml
hprss-sim/crates/hprss-platform/src/: config.rs  lib.rs
hprss-sim/crates/hprss-scheduler/: Cargo.toml
hprss-sim/crates/hprss-scheduler/src/: cpedf.rs  edf.rs  edfvd.rs  federated.rs  gang.rs  gcaps.rs  global_edf.rs  gpreempt.rs  gpu_preemptive_priority.rs  heft.rs  lib.rs  llf.rs  match_sched.rs  rtgpu.rs  xsched.rs
hprss-sim/crates/hprss-scheduler/tests/: gpu_preemptive_priority.rs
hprss-sim/crates/hprss-sim/: Cargo.toml
hprss-sim/crates/hprss-sim/src/: main.rs  scheduler_catalog.rs
hprss-sim/crates/hprss-types/: Cargo.toml
hprss-sim/crates/hprss-types/src/: dag.rs  device.rs  event.rs  job.rs  lib.rs  policy.rs  scheduler.rs  task.rs  time.rs
hprss-sim/crates/hprss-validate/: Cargo.toml
hprss-sim/crates/hprss-validate/src/: lib.rs
hprss-sim/crates/hprss-validate/src/analytic/: conditional_dag.rs  level1.rs  level2.rs  level4.rs  mod.rs  openmp_wcrt.rs  rta.rs  shape.rs  uniform_rta.rs  util_vectors.rs
hprss-sim/crates/hprss-validate/src/differential/: cpu_only.rs  heft_repro.rs  mod.rs  paper_exp.rs  simso.rs
hprss-sim/crates/hprss-validate/tests/: conditional_dag.rs  heft_repro.rs  level3_simso.rs  openmp_wcrt.rs  paper_exp_summary.rs  rta_family.rs  shape_analytic.rs  uniform_rta.rs  util_vectors.rs
hprss-sim/crates/hprss-validate/tests/fixtures/: simso_adapter_contract_alignment.py  simso_adapter_extended_schema_sentinel.py  simso_adapter_fixture.py  simso_adapter_invalid_field.py  simso_adapter_legacy_sentinel.py  simso_adapter_malformed_json.py  simso_adapter_missing_field.py  simso_adapter_nonzero.py  simso_adapter_single_task_match.py  simso_adapter_sleep.py
hprss-sim/crates/hprss-workload/: Cargo.toml
hprss-sim/crates/hprss-workload/src/: dag_generator.rs  generator.rs  karami_profile_adapter.rs  lib.rs  openmp_adapter.rs  replay.rs  uunifast.rs
hprss-sim/crates/hprss-workload/tests/: karami_profile_adapter.rs  openmp_adapter.rs
hprss-sim/crates/hprss-workload/tests/fixtures/: karami_profile_sample.json  openmp_specialized_sample.json  replay_deadline_miss.json  replay_jobs.csv  replay_sample.json  replay_tasks.csv
hprss-sim/docs/profiling/: baseline-report.md
hprss-sim/docs/superpowers/plans/: 2026-04-08-phase1-foundation-implementation-plan.md
hprss-sim/docs/superpowers/specs/: 2026-04-08-hprss-sim-full-implementation-design.md  2026-04-08-perf-optimization-design.md  2026-04-09-algorithm-bias-budget.json  2026-04-09-algorithm-bias-budget.md  2026-04-09-all-algorithms-handover.md  2026-04-09-all-paper-algorithm-catalog.json  2026-04-09-all-paper-algorithm-catalog.md  survey-taxonomy-matrix.json
hprss-sim/scripts/: alg_paper_reproduction_suite.py  build_evidence_bundle.py  check_survey_taxonomy_matrix.py  compare_hw_alignment.py  plot_comparison.py  plot_experiments.py  plot_gantt.py  plot_response_time.py  plot_schedulability.py  simso_adapter_runner.py  test_alg_paper_reproduction_suite.py  test_build_evidence_bundle.py  test_check_survey_taxonomy_matrix.py  test_compare_hw_alignment.py  test_plot_experiments.py  test_plot_suite.py
