[workspace]
resolver = "2"
members = [
    "crates/hprss-types",
    "crates/hprss-engine",
    "crates/hprss-platform",
    "crates/hprss-devices",
    "crates/hprss-scheduler",
    "crates/hprss-workload",
    "crates/hprss-metrics",
    "crates/hprss-validate",
    "crates/hprss-sim",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["HPRSS Team"]
license = "MIT OR Apache-2.0"
description = "Heterogeneous Processor Real-time Scheduling Simulator"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Collections
smallvec = { version = "1", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }

# Random
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"

# CLI & Logging
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Testing
approx = "0.5"
proptest = "1"

# Internal crates
hprss-types = { path = "crates/hprss-types" }
hprss-engine = { path = "crates/hprss-engine" }
hprss-platform = { path = "crates/hprss-platform" }
hprss-devices = { path = "crates/hprss-devices" }
hprss-scheduler = { path = "crates/hprss-scheduler" }
hprss-workload = { path = "crates/hprss-workload" }
hprss-metrics = { path = "crates/hprss-metrics" }
hprss-validate = { path = "crates/hprss-validate" }
hprss-sim = { path = "crates/hprss-sim" }

[profile.release]
debug = true
