[package]
name = "hprss-engine"
version.workspace = true
edition.workspace = true
description = "Discrete Event Simulation engine"

[dependencies]
hprss-types = { workspace = true }
hprss-platform = { workspace = true }
hprss-devices = { workspace = true }
hprss-scheduler = { workspace = true }
hprss-metrics = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
slab = "0.4.12"

[dev-dependencies]
approx = { workspace = true }
criterion = { version = "0.8", features = ["html_reports"] }
hprss-workload = { workspace = true }

[[bench]]
name = "engine_bench"
harness = false
