[package]
name = "hprss-platform"
version.workspace = true
edition.workspace = true
description = "Platform model and TOML configuration loading"

[dependencies]
hprss-types = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
